objects/MarketoLeadSFAccountMapping__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketoLeadId__c</fullName>
        <externalId>true</externalId>
        <label>MarketoLeadId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OldSFAccountId__c</fullName>
        <label>OldSFAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFAccountId__c</fullName>
        <label>SFAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>"New"</defaultValue>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>A temporary Custom Object used to update the SalesforceAccountId attribute of Leads in Marketo</description>
    <label>MarketoLeadSFAccountMapping</label>
    <nameField>
        <label>MarketoLeadSFAccountMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarketoLeadSFAccountMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>MarketoLeadId__c</columns>
        <columns>SFAccountId__c</columns>
        <columns>OldSFAccountId__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>